setup/healthz/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: healthz
  namespace: default
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: healthz
    spec:
      containers:
      - name: healthz
        image: maidong/healthz:v1.0.0
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        command:
        - ./healthz
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
