setup/healthz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthz
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: healthz
  type: ClusterIP
